--- a/index.html
+++ b/index.html
@@ -5,11 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Test Git</title>
+    <title>Start Using Git</title>
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 
   </head>
   <body>
-<h1>Welcome To Test Git</h1>
+<h1>Start Using Git</h1>
+<p>Useful Git commands</p>
+
+<code>
+
+// configure User name<br>
+$ git config --global user.name "git username"<br>
+
+// configure User email<br>
+$ git config --global user.email youremail<br>
+
+<br><br>
+
+// clone  on system<br>
+$ git clone repositoryLink <br>
+
+<br><br>
+
+// Adding File on repository<br>
+$ git add index.html<br>
+<br><br>
+//git-commit Stores the current contents of the index in a new commit along with a log message from the user describing the changes<br>
+
+
+
+
+
+
+ 
+
+
+
+</code>
+
+<style>
+body{font-family: 'Raleway', sans-serif; padding:20px;}
+body h1{margin:0; padding:20px 0 0; }
+</style>
+
 </body>  
   </html>
